--- a/ui/first.html
+++ b/ui/first.html
@@ -8,8 +8,7 @@
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
-
-</Body>
+</body>
 
 
 </html>
