[imad-console] Updates ui/firstpage.html

--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -5,10 +5,14 @@
 </head>
 
 <body>
+    
+<div class: center>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
+
+</div>
 </body>
 
 
