[imad-console] Updates ui/firstpage.html

--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -6,7 +6,7 @@
 
 <body>
     
-<div class: center>
+<div class= center>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
