[imad-console] Updates ui/firstpage.html

--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title> This is my first page </title>
+<href>Home</href>
 <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
