--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
 <title> This is my first page </title>
-<href>Home</href>
+
 <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 <body>
-    
+<a href = "/"> Home </a>
 <div class= "center">
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
