--- a/ui/firstpage.html
+++ b/ui/firstpage.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<a href = "/"> Home </a>
+<a href = "/"> <h5>Home </h5> </a>
 <div class= "center">
 <p> Thsi is my first page and I will make it awesome </p>
 <p> Thsi is my first page and I will make it awesome </p>
